--- a/version1/index.html
+++ b/version1/index.html
@@ -18,7 +18,12 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
   <script src="version1/src/js/main.js" type="MIME"></script>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+  <script type="text/javascript" src="/runtime.js"></script>
+  <script type="text/javascript" src="/polyfills.js"></script>
+  <script type="text/javascript" src="/styles.js"></script>
+  <script type="text/javascript" src="/vendor.js"></script>
+  <script type="text/javascript" src="/main.js"></script>
+  </body>
 
 
 </html>
