--- a/version1/index.html
+++ b/version1/index.html
@@ -18,11 +18,11 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
   <script src="version1/src/js/main.js" type="MIME"></script>
-  <script type="text/javascript" src="version1/runtime.js"></script>
-  <script type="text/javascript" src="version1/polyfills.js"></script>
-  <script type="text/javascript" src="version1/styles.js"></script>
-  <script type="text/javascript" src="version1/vendor.js"></script>
-  <script type="text/javascript" src="version1/main.js"></script>
+  <script type="text/javascript" src="/mytunesdeploy/version1/runtime.js"></script>
+  <script type="text/javascript" src="/mytunesdeploy/version1/polyfills.js"></script>
+  <script type="text/javascript" src="/mytunesdeploy/version1/styles.js"></script>
+  <script type="text/javascript" src="/mytunesdeploy/version1/vendor.js"></script>
+  <script type="text/javascript" src="/mytunesdeploy/version1/main.js"></script>
   </body>
 
 
